updated working experiences.

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <!-- saved from url=(0037)http://www.cs.rochester.edu/~nasrinm/ -->
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
@@ -65,35 +66,36 @@ ul li a i:hover {
 <medium>Department of Computer Science<br>
 University of North Texas<br>
 Denton, TX<br>
-Email: zahrasarabi [at] my [dot] unt [dot] edu</medium>
-<br>
-<div class="navbar-text pull-left">
-          <a href="https://twitter.com/z_sarabi"><i class="fa fa-twitter fa-3x"></i></a>
+Email: zahrasarabi@my.unt.edu</medium>
+<br /><br />
+<div  class="nav pull-left">
+          <a href="https://www.twitter.com/z_sarabi"><i class="fa fa-twitter fa-3x"></i></a>
           <a href="https://www.linkedin.com/in/zahra-sarabi-06a4996b/"><i class="fa fa-linkedin fa-3x"></i></a>
-<br>
 </div>
 </div> <!--col-->
-<div class="col-md-4">
-<img class="img-polaroid" src="pics/zahra2.jpg" width="230" height="170">
+<div class="col-md-4" style="float: left;">
+<img src="pics/zahra2.jpg" width="210" height="160" ALT="image">
+
 </div>
 </div> <!-- row -->
 
 
 		 
 <br>
-<p class="lead">I'm Zahra Sarabi and currently I am a PhD candidate and a member of <a herf="http://hilt.cse.unt.edu/">Human Intelligence and Language Technologies laboratory</a> at the Computer Science department at <a href="http://www.unt.edu/">University of North Texas</a>, advised by <a href="http://www.cse.unt.edu/~blanco/"> Dr. Eduardo Blanco </a>. 
+<p class="topic">I'm Zahra Sarabi, a PhD candidate at the <a href="http://www.unt.edu/">University of North Texas</a>. I am a member of the <a herf="http://hilt.cse.unt.edu/">Human Intelligence and Language Technologies laboratory</a> in the Computer Science department at University of North Texas. My advisor is <a href="http://www.cse.unt.edu/~blanco/"> Dr. Eduardo Blanco</a>. 
 <br>
-In my spare time I serve as Vice President of <a href="http://unt.orgsync.com/org/wic">UNT Women in Computing</a>. [<a href=resume.pdf>Resume</a>]
+In my spare time I serve as vice president of <a href="http://unt.orgsync.com/org/wic">UNT Women in Computing</a>.<br>
+<!--[<a href="papers/resume.pdf">CV</a>]-->
 </p>
 <br />
 
 <div class="row">
   <div class="col-md-4">
-  <img class="img-polaroid" src="pics/nlp2.jpg" alt="photo" height="160">
+  <img class="img-polaroid" src="pics/nlp2.jpg" alt="photo" height="150">
 </div>
 <div class="col-md-8">
 <div class="alert alert-info">
-My research interests lie in the areas of Natural Language Processing and Machine Learning. I work to make computers understand and generate natural language better. I mainly work on <strong>Negation</strong> which is a complex phenomenon present in all human languages, allowing for the uniquely human capacities of denial, contradiction, and irony. In my research I am developing a system that can understand Negation in positive terms with applications ranging from machine translation to language inference.
+My research interests lie in the areas of natural language processing and machine learning. I work to make computers understand and generate natural language better. I mainly work on <strong>Negation</strong>. In my research I am developing a system that can understand Negation in positive terms with applications ranging from machine translation to textual entailment and commonsense reasoning. More specifically, I am identifying the (usually few) tokens that are intended to be negated within a negated statement, and plan to rewrite them with their positive counterparts.
 </div>
 </div>
 </div> <!-- row -->
@@ -110,25 +112,17 @@ My research interests lie in the areas of Natural Language Processing and Machin
     If No Media Were Allowed inside the Venue, Was Anybody Allowed?
     In <i>Proceedings of the 15th Conference of the European Chapter of the Association for Computational Linguistics (<strong>EACL</strong>)</i>.
     Valencia, Spain.
-    [<a href=papers/no_media.bib>bib</a>,
-    <a href=papers/no_media.pdf>pdf</a>]
+    [<a href=papers/no-media.bib>bib</a>,
+    <a href=papers/eacl2017.pdf>pdf</a>]
     <br /><br /> 
-
-<li> Zahra Sarabi and Eduardo Blanco.
-    2017.
-    Understanding Negation in Positive Terms.
-    In <i> proceedings of Women in MAchine Learning Workshop, Co-located with the Neural Information Processing Systems Conference (<strong>WiML</strong>)</i>.
-    Long Beach, CA, USA.
-    [<a href="papers/wiml2017.pdf">Poster</a>]
-   <br /><br />
 
 <li> Zahra Sarabi and Eduardo Blanco.
     2016.
     Understanding Negation in Positive Terms Using Syntactic Dependencies.
     In <i>Proceedings of the 2016 Conference on Empirical Methods in Natural Language Processing (<strong>EMNLP</strong>)</i>.
     Austin, TX, USA.
-    [<a href=papers/understanding_negation_dependencies.bib>bib</a>,
-    <a href=papers/understanding_negation_dependencies.pdf>pdf</a>]
+    [<a href=papers/emnlp.bib>bib</a>,
+    <a href=papers/emnlp.pdf>pdf</a>]
     <br /><br />
 
 <li> Eduardo Blanco and Zahra Sarabi.
@@ -136,8 +130,8 @@ My research interests lie in the areas of Natural Language Processing and Machin
     Automatic Generation and Scoring of Positive Interpretations from Negated Statements.
     In <i> Proceeding of the 15th Annual Conference of the North American Chapter of the Association for Computational Linguistics (<strong>NAACL</strong>)</i>.
     San Diego, CA, USA.
-    [<a href=papers/automatic_generation_scoring_positive_interpretations.bib>bib</a>,
-    <a href=papers/automatic_generation_scoring_positive_interpretations.pdf>pdf</a>]
+    [<a href=papers/naacl.bib>bib</a>,
+    <a href=papers/naacl.pdf>pdf</a>]
     <br /><br />
 
 <li> Zahra Sarabi and Morteza Analoui. 
@@ -151,21 +145,53 @@ My research interests lie in the areas of Natural Language Processing and Machin
 <li> Zahra Sarabi and Mojgan Farhoodi.
      2013.
      ParsiPardaz: Persian Language Processing Toolkit.
-     In <i> In Proceedings of The 3rd International Conference on Computer and Knowledge Engineering, (<strong>ICCKE</strong>)</i>.
+     In <i> Proceedings of The 3rd International Conference on Computer and Knowledge Engineering, (<strong>ICCKE</strong>)</i>.
      Mashhad, Iran.
      [<a href=papers/parsipardaz.pdf>pdf</a>]
      <br /><br />
      
 </ol>
 
-<a name="past"></a>
-<h3>Past Work</h3>
+
+<a name="presentations"></a>
+<h2>Presentations</h2>
 <br />
-<p class="pad">Befor coming to UNT, I was working on Persian language processing. We designed and implemented an NLP Toolkit for <strong>Persian</strong> using JAVA (<strong>ParsiPardaz</strong>). This task was done as part of a larger project focused on designing a <strong>question answering</strong> system for the Persian language. The toolkit includes a Tokenizer, Lemmatizer, POS tagger and Dependency Parser. Results were published in [<a href=papers/parsipardaz.pdf>6</a>]. An online version of ParsiPardaz toolkit is available: <a href="http://quranjooy.itrc.ac.ir/nlp_main.php">ParsiPardaz</a></p>
+<ol>
+
+<li> Zahra Sarabi and Eduardo Blanco.
+    2017.
+    Understanding Negation in Positive Terms.
+    In <i> Women in Machine Learning Workshop, Co-located with the Neural Information Processing Systems Conference (<strong>WiML</strong>)</i>.
+    Long Beach, CA, USA.
+    [<a href="papers/wiml2017.pdf">Poster</a>]
+   <br /><br />
+</ol>
+
+<!-- ----------------------Working experiences: --------------------------- -->
+
+<h2>Professional Experience</h2>
+<br/>
+<ol>
+<li> Machine Learning and Data Analytics Research Intern, Walmart Technology, Summer 2018:
+<ul>
+<li>Creating machine learning models for business</li></br>
+<li>Working with big data tools: Spark, Hadoop</li>
+<li>Leading annotating more than 10,000 documents using linguist annotators, implementing annotation interface, peer-mentoring annotators, validating annotation </li>
+</ul></li>
+<li>Teaching Assistant: Computer Science Department, University of North Texas, August 2018- present</li>
+<li>Research Assistant: Computer Science Department, University of North Texas, August 2015-May 2018</li>
+<li>Employment: Research Institute of Information Technology (ITRC) Jan. 2012 - Mar. 2015</li>
+<ul>
+<li> 
+Befor coming to UNT, I was working on Persian language processing. We designed and implemented an NLP Toolkit for <strong>Persian</strong> using JAVA (<strong>ParsiPardaz</strong>). This task was done as part of a larger project focused on designing a <strong>question answering</strong> system for the Persian language. The toolkit includes a Tokenizer, Lemmatizer, POS tagger and Dependency Parser. Results were published in [<a href=papers/parsipardaz.pdf>5</a>]. An online version of ParsiPardaz toolkit is available: <a href="http://quranjooy.itrc.ac.ir/nlp_main.php">ParsiPardaz</a>
+</li>
+</ul></li> 
+</ol>
+
   <br /><br />
+<div style="text-align: center;"><IMG SRC="pics/fa.jpg" width="140" height="50" ALT="image"></div>
 
-
-
+<br />
 
 
 </div> <!--container-->
