--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@ Befor coming to UNT, I was working on Persian language processing. We designed a
 
 
 </div> <!--container-->
-
+<div style="text-align:center;"><script type="text/javascript" src="http://services.webestools.com/cpt_visits/19549-17-5.js"></script></div><a href="http://www.webestools.com/" style="display:block;text-align:center;" title="Tools services webmasters counters generators scripts tutorials free"><img src="http://www.webestools.com/images/ban03.gif" alt="Tools services webmasters counters generators scripts tutorials free" /></a>
 </body>
 </div>
 </html>
